--- a/app.json
+++ b/app.json
@@ -27,9 +27,9 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "image": "./assets/images/splash.png",
+          // "imageWidth": 200,
+          "resizeMode": "cover",
           "backgroundColor": "#ffffff"
         }
       ]
